--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Influencer Pack</title>
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="icon" type="image/png" href="#" />
+    <link rel="icon" type="image/png" href="/imagens/box.svg" />
   </head>
   <body>
+    <!--MENU-->
 
+    <header  id="header">
+      <nav class="container">
+
+        <a class="logo" href="#"><img src="/imagens/box.svg"></a>
+
+        <div class="menu">
+          <ul class="grid">
+            <li><a class="title" href="#home">O PACK</a></li>
+            <li><a class="title"  href="#about">Detalhes</a></li>
+            <li><a class="title"  href="#services">Bônus</a></li>
+            <li><a class="title"  href="#testimonials">Garantia</a></li>
+          </ul>
+        </div>
+
+      </nav>
+    </header>
+      
     <script src="index.js"></script>
   </body>
 </html>
