--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="icon" type="image/png" href="./imagens/box.svg" />
 
+    <link rel="stylesheet" href="./css/responsive.css" />
+    <link rel="stylesheet" href="./css/motion.css" />
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +38,7 @@
 
     <main>
 
-    <section class="section swiper-slide" id="home">
+    <section class="section" id="home">
 
       <h1>SEJA UMA <span>INFLUENCER RECONHECIDA</span> E <span>LOTE SUA AGENDA</span> DE PARCERIAS</h1>
 
@@ -50,7 +53,10 @@
         </div>
 
         <div class="video">
-          <iframe width="741" height="415" src="https://www.youtube.com/embed/lm7mzc_7GBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/lm7mzc_7GBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          <a href="https://pay.hotmart.com/U43337827C?checkoutMode=2&bid=1627395211702" target="blank"><p class="button1500">PEGAR MEU PACK</p></a>
+          
         </div>
 
       </div>
