--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main>
 
-    <section class="section" id="home">
+    <section id="home">
 
       <h1>SEJA UMA <span>INFLUENCER RECONHECIDA</span> E <span>LOTE SUA AGENDA</span> DE PARCERIAS</h1>
 
@@ -63,7 +63,7 @@
 
     </section>
 
-    <section class="section margin-section" id="about">
+    <section class="margin-section" id="about">
       <div class="first">
 
         <h3>Esse produto foi pensado, com muito carinho, em você que:</h3>
@@ -151,7 +151,7 @@
       </div>
     </section>
 
-    <section class="section" id="about2">
+    <section class="margin-section" id="about2">
 
       <div class="btn">
         <h2>O QUE ESTÁ INCLUSO?</h2>
@@ -208,7 +208,7 @@
 
     </section>
 
-    <section class="section margin-section" id="bonus">
+    <section class="margin-section" id="bonus">
 
       <div class="title">
 
@@ -221,7 +221,7 @@
       <div class="list">
 
         <div class="itens">
-          <svg width="17" height="17" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="20" height="20" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="7.5" cy="7.5" r="7.5" fill="white"/>
           </svg>
           <p>STORIES TUNADO: como <b>disparar as visualizações dos stories</b> e manter elas altas.</p>
@@ -241,7 +241,7 @@
           <p>Como ser <b>aumentam seus seguidores e engajamento.</b> e marcas e <b>ganhar seguidores</b> com isso.</p>
         </div>
 
-        <div class="itens">
+        <div class="itens ">
           <svg width="20" height="20" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="7.5" cy="7.5" r="7.5" fill="white"/>
           </svg>
@@ -256,7 +256,7 @@
 
     </section>
 
-    <section class="section" id="resume">
+    <section class="margin-section" id="resume">
 
         <h3>Acessando o pack hoje, você receberá: </h3>
 
@@ -311,9 +311,9 @@
         </div>
 
         <div class="itens">
-          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="10" cy="10" r="8" stroke="#FFDE59" stroke-width="4"/>
-          </svg>
+          <svg class="bug" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="10" cy="10" r="8" stroke="#FFDE59" stroke-width="4"/>
+            </svg>
           <div class="names">
             <p>Técnicas para ganhar seguidores e ser repostada</p>
             <p class="price">R$47,00</p>
@@ -346,7 +346,7 @@
 
     </section>
 
-    <section class="section margin-section" id="garantia">
+    <section class="margin-section" id="garantia">
 
       <p>
         Se não ficar satisfeita ou não for o que você esperava, é só acessar a área de membros e solicitar o reembolso, eu te devolvo 100% do seu dinheiro de volta, o que você tem a perder?
@@ -356,7 +356,7 @@
 
     </section>
 
-    <section class="section margin-section" id="aviso">
+    <section class="margin-section" id="aviso">
       <p>
         Este produto não garante a obtenção de resultados. Qualquer referência ao desempenho de uma estratégia não deve ser interpretada como uma garantia de resultados.
       </p>
