--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" type="image/png" href="./imagens/box.svg" />
 
     <link rel="stylesheet" href="./css/responsive.css" />
-    <link rel="stylesheet" href="./css/motion.css" />
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +25,7 @@
 
         <div class="menu">
           <ul class="grid">
-            <li><a class="title" href="#">O PACK</a></li>
+            <li><a class="title" href="#home">O PACK</a></li>
             <li><a class="title"  href="#about">Detalhes</a></li>
             <li><a class="title"  href="#bonus">Bônus</a></li>
             <li><a class="title"  href="#garantia">Garantia</a></li>
@@ -151,7 +150,7 @@
       </div>
     </section>
 
-    <section class="margin-section" id="about2">
+    <section class="margin-section about2">
 
       <div class="btn">
         <h2>O QUE ESTÁ INCLUSO?</h2>
@@ -256,7 +255,7 @@
 
     </section>
 
-    <section class="margin-section" id="resume">
+    <section class="margin-section resume">
 
         <h3>Acessando o pack hoje, você receberá: </h3>
 
@@ -356,17 +355,25 @@
 
     </section>
 
-    <section class="margin-section" id="aviso">
+    <section class="margin-section aviso">
       <p>
         Este produto não garante a obtenção de resultados. Qualquer referência ao desempenho de uma estratégia não deve ser interpretada como uma garantia de resultados.
       </p>
     </section>
 
+  </main>
+
     <footer>
       <p>© Copyright 2021 Ana Kroehn. Todos os direitos reservados</p>
     </footer>
 
-    </main>
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></i></a>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script src="index.js"></script>
 
   </body>
 </html>
