--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="15" cy="15" r="15" fill="#CB6CE6"/>
                 </svg>
-                <p>Quer ser levada a sério</p>
+                <p>Quer ser levada à sério</p>
             </div>
 
             <div class="item">
@@ -162,7 +162,7 @@
 
           <div class="aulas">
             <h3>aulas gravadas</h3>
-            <p>Você terá acesso à aulas legendadas
+            <p>Você terá acesso às aulas legendadas
               sobre seus direitos e deveres, negociação,
               como e quanto cobrar, como ser encontrada,
               aula sobre credibilidade e muito +.</p>
@@ -171,8 +171,8 @@
           <div class="carta">
             <h3>carta de apresentação</h3>
             <p>São 4 modelos de carta de apresentação,
-              também editáveis e acompanhadas de aula, pra
-              você propor parceria praquela marca que
+              também editáveis e acompanhadas de aula, para
+              você propor parceria para aquela marca que
               sempre sonhou, com muito mais profissionalismo
               e chance de fechar contrato, todas testadas
               e validadas.</p>
@@ -184,10 +184,10 @@
   
           <div class="midia">
             <h3>mídia kit</h3>
-            <p>Além das aulas, você receberá acesso à
+            <p>Além das aulas, você receberá acesso aos
               modelos de mídia kit para todos os gostos,
               todos editáveis, usando a versão gratuita
-              do canva e com aula passo a passo sobre
+              do Canva e com aula passo a passo sobre
               como editar e usar.</p>
           </div>
   
@@ -237,7 +237,7 @@
           <svg width="20" height="20" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="7.5" cy="7.5" r="7.5" fill="white"/>
           </svg>
-          <p>Como ser <b>aumentam seus seguidores e engajamento.</b> e marcas e <b>ganhar seguidores</b> com isso.</p>
+          <p>Como ser repostada,<b> aumentar seus seguidores</b> e <b>ganhar seguidores</b> com isso.</p>
         </div>
 
         <div class="itens ">
